[project]
name = "task-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Abdul-Rafeh Alvi",email = "abdulr15352@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.118.0,<0.119.0)",
    "bcrypt (==4.0.1)",
    "pydantic (>=2.11.9,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
